--- a/test/pom.xml
+++ b/test/pom.xml
@@ -7,24 +7,22 @@
 		<artifactId>martinet-parent</artifactId>
 		<version>1.0.0</version>
 	</parent>
-
-	<artifactId>martinet-server</artifactId>
-	<packaging>jar</packaging>
-
+	
+	<artifactId>test</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>com.panchen</groupId>
-			<artifactId>martinet-common</artifactId>
+			<artifactId>martinet-server</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
+			<groupId>com.panchen</groupId>
+			<artifactId>martinet-plugin</artifactId>
 		</dependency>
 	</dependencies>
+
 </project>
