Adding log adapters and changing directory structure

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,4 +12,10 @@
 		<version>1.0.0</version>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+		</dependency>
+	</dependencies>
 </project>
