--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>plugin</module>
-		<module>server</module>
-		<module>dashboard</module>
-		<module>common</module>
-		<module>test</module>
-		<module>martinet-plugin2</module>
+		<module>martinet-client</module>
+		<module>martinet-server</module>
+		<module>martinet-dashboard</module>
+		<module>martinet-common</module>
+		<module>martinet-test</module>
 	</modules>
 
 
@@ -23,6 +22,7 @@
 		<junit.version>4.12</junit.version>
 		<martinet.version>1.0.0</martinet.version>
 		<spring-context.version>5.0.5.RELEASE</spring-context.version>
+		<spring-boot-starter-log4j2.version>2.1.2.RELEASE</spring-boot-starter-log4j2.version>
 	</properties>
 
 	<dependencyManagement>
@@ -69,6 +69,13 @@
 				<artifactId>spring-context</artifactId>
 				<version>${spring-context.version}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-log4j2</artifactId>
+				<version>${spring-boot-starter-log4j2.version}</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 </project>
