--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<martinet.version>1.0.0</martinet.version>
 		<spring-context.version>5.0.5.RELEASE</spring-context.version>
 		<spring-boot-starter-log4j2.version>2.1.2.RELEASE</spring-boot-starter-log4j2.version>
+		<groovy-all.version>2.5.5</groovy-all.version>
 	</properties>
 
 	<dependencyManagement>
@@ -75,7 +76,13 @@
 				<artifactId>spring-boot-starter-log4j2</artifactId>
 				<version>${spring-boot-starter-log4j2.version}</version>
 			</dependency>
-			
+
+			<dependency>
+				<groupId>org.codehaus.groovy</groupId>
+				<artifactId>groovy-all</artifactId>
+				<version>${groovy-all.version}</version>
+				<type>pom</type>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
