--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,5 +26,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 </project>
