Put handler and listener in the right place

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -22,5 +22,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 </project>
