--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,31 @@
 		<module>martinet-test</module>
 	</modules>
 
-
 	<properties>
 		<netty-all.version>4.1.32.Final</netty-all.version>
 		<junit.version>4.12</junit.version>
 		<martinet.version>1.0.0</martinet.version>
 		<spring-context.version>5.0.5.RELEASE</spring-context.version>
-		<spring-boot-starter-log4j2.version>2.1.2.RELEASE</spring-boot-starter-log4j2.version>
+		<spring-boot.version>2.0.2.RELEASE</spring-boot.version>
 		<groovy-all.version>2.5.5</groovy-all.version>
+		<fastjson.version>1.2.56</fastjson.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${spring-boot.version}</version>
+			</dependency>
+
+
 			<dependency>
 				<groupId>io.netty</groupId>
 				<artifactId>netty-all</artifactId>
@@ -74,7 +87,7 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-log4j2</artifactId>
-				<version>${spring-boot-starter-log4j2.version}</version>
+				<version>${spring-boot.version}</version>
 			</dependency>
 
 			<dependency>
@@ -82,6 +95,18 @@
 				<artifactId>groovy-all</artifactId>
 				<version>${groovy-all.version}</version>
 				<type>pom</type>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter</artifactId>
+				<version>${spring-boot.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${spring-boot.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
